--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Hello Kevin Hetzel
+<!DOCTYPE html>
+<html>
+        <head>
+
+        </head>
+        <body>
+            <h1>Kevin Hetzel's CSCE 190 Site</h1>
+
+            <section class="assignment">
+                <a href="Files/190-Problem Statement.pdf"><img src="Images/problem_statement.png"></a>
+                <section class="ass-details">
+                    <a href="Files/190-Problem Statement.pdf"><h2>Problem Statement</h2></a>
+                    <p>
+                        Our users want to redesign rooms or the look of their living space, but struggle to tell if these designs would function to their style and appeal. Our solution should provide users with a method to help decide if they like the layout and setting of their new living space.
+                    </p>
+                </section>
+            </section>
+
+        </body>
+</html>
