--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             <h1>Kevin Hetzel's CSCE 190 Site</h1>
 
             <section class="assignment">
-                <a href="Files/190-Problem Statement.pdf"><img src="Images/problem_statement.png"></a>
+                <a href="Files/190-Problem Statement.pdf"><img src="Images/problem_statement.PNG"></a>
                 <section class="ass-details">
                     <a href="Files/190-Problem Statement.pdf"><h2>Problem Statement</h2></a>
                     <p>
