--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         </head>
         <body>
             <h1>Kevin Hetzel's CSCE 190 Site</h1>
-
+            <!-- Problem Statement Assignment-->
             <section class="assignment">
-                <a href="Files/190-Problem Statement.pdf"><img src="Images/problem_statement.PNG"></a>
+                <a href="Files/190-Problem Statement.pdf"><img src="Images/problem_statement.png"></a>
                 <section class="ass-details">
                     <a href="Files/190-Problem Statement.pdf"><h2>Problem Statement</h2></a>
                     <p>
@@ -16,5 +16,15 @@
                 </section>
             </section>
 
+            <!--Affinity Diagram Assignment-->
+            <section class="assignment">
+                <a href="Files/Affinity Diagram- Living Space.pdf"><img src="Images/Affinity Diagram.PNG"></a>
+                <section class="ass-details">
+                    <a href="Files/Affinity Diagram- Living Space.pdf"><h2>Problem Statement</h2></a>
+                    <p>
+                        My group and I worked together to brainstorm about who wants our product and what features it should have
+                    </p>
+                </section>
+            </section>
         </body>
 </html>
