--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <section class="assignment">
                 <a href="Files/190-Problem Statement.pdf"><img src="Images/problem_statement.png"></a>
                 <section class="ass-details">
-                    <a href="Files/190-Problem Statement.pdf"><h2>Problem Statement</h2></a>
+                    <a href="Files/190-Problem Statement.pdf"><h2>Problem Statement: Living Space</h2></a>
                     <p>
                         Our users want to redesign rooms or the look of their living space, but struggle to tell if these designs would function to their style and appeal. Our solution should provide users with a method to help decide if they like the layout and setting of their new living space.
                     </p>
@@ -20,7 +20,7 @@
             <section class="assignment">
                 <a href="Files/Affinity Diagram- Living Space.pdf"><img src="Images/Affinity Diagram.PNG"></a>
                 <section class="ass-details">
-                    <a href="Files/Affinity Diagram- Living Space.pdf"><h2>Problem Statement</h2></a>
+                    <a href="Files/Affinity Diagram- Living Space.pdf"><h2>Affinity Diagram: Living Space</h2></a>
                     <p>
                         My group and I worked together to brainstorm about who wants our product and what features it should have
                     </p>
