--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
         <head>
-
+            <title>CSCE: 190 Kevin Hetzel</title>
+            <link rel="stylesheet" href="styles.css">
         </head>
         <body>
             <h1>Kevin Hetzel's CSCE 190 Site</h1>
@@ -23,6 +24,17 @@
                     <a href="Files/Affinity Diagram- Living Space.pdf"><h2>Affinity Diagram: Living Space</h2></a>
                     <p>
                         My group and I worked together to brainstorm about who wants our product and what features it should have
+                    </p>
+                </section>
+            </section>
+
+            <!--Persona Assignment-->
+            <section class="assignment">
+                <a href="Files/190-Personas.pdf"><img src="Images/Persona.png"></a>
+                <section class="ass-details">
+                    <a href="Files/190-Personas.pdf"><h2>Personas for Living Space</h2></a>
+                    <p>
+                        Personas of Living Space Users
                     </p>
                 </section>
             </section>
