--- a/index.html
+++ b/index.html
@@ -38,5 +38,16 @@
                     </p>
                 </section>
             </section>
+
+             <!--Sotryboard Assignment-->
+             <section class="assignment">
+                <a href="Files/190-Storyboards.pdf"><img src="Images/Storyboard.png"></a>
+                <section class="ass-details">
+                    <a href="Files/190-Storyboards.pdf"><h2>Storyboards for Living Space</h2></a>
+                    <p>
+                        Some sotires about users of Living Space
+                    </p>
+                </section>
+            </section>
         </body>
 </html>
