--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <section class="ass-details">
                     <a href="Files/190-Storyboards.pdf"><h2>Storyboards for Living Space</h2></a>
                     <p>
-                        Some sotires about users of Living Space
+                        Some stoires about users of Living Space
                     </p>
                 </section>
             </section>
