--- a/index.html
+++ b/index.html
@@ -39,13 +39,24 @@
                 </section>
             </section>
 
-             <!--Sotryboard Assignment-->
+             <!--Storyboard Assignment-->
              <section class="assignment">
                 <a href="Files/190-Storyboards.pdf"><img src="Images/Storyboard.png"></a>
                 <section class="ass-details">
                     <a href="Files/190-Storyboards.pdf"><h2>Storyboards for Living Space</h2></a>
                     <p>
-                        Some stories about users of Living Space
+                        Some stoires about users of Living Space
+                    </p>
+                </section>
+            </section>
+
+            <!--Sketch Assignment-->
+            <section class="assignment">
+                <a href="Files/190-Sketches.pdf"><img src="Images/sketch.png"></a>
+                <section class="ass-details">
+                    <a href="Files/190-Sketches.pdf"><h2>Sketches for what we think Living Space might look like</h2></a>
+                    <p>
+                        App Designs
                     </p>
                 </section>
             </section>
