--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <section class="assignment">
                 <a href="Files/Hi-Fi prototype/index.html"><img src="Images/Prototype.png"></a>
                 <section class="ass-details">
-                    <a href="Files/190-Sketches.pdf"><h2>Hi-Fi Prototype</h2></a>
+                    <a href="Files/Hi-Fi prototype/index.html"><h2>Hi-Fi Prototype</h2></a>
                     <p>
                         A Prototype of our App
                     </p>
