--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 
             <!--Hi-Fi Prototype Assignment-->
             <section class="assignment">
-                <a href="Files/Hi-Fi prototype/index.html"><img src="Images/Prototype.png"></a>
+                <a href="Files/Hi-Fi prototype/preview.html"><img src="Images/Prototype.png"></a>
                 <section class="ass-details">
-                    <a href="Files/Hi-Fi prototype/index.html"><h2>Hi-Fi Prototype</h2></a>
+                    <a href="Files/Hi-Fi prototype/preview.html"><h2>Hi-Fi Prototype</h2></a>
                     <p>
                         A Prototype of our App
                     </p>
